# adk-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  NOTES.md  README.md  pyproject.toml
a2a_as_tool/: agent.py
a2a_consumer/: agent.py
adk_agent/: __init__.py  a2a_server.py  agent.py  cli.py  config.py  mcp_http_check.py  mcp_server.py  observability.py
adk_agent/.adk/: session.db
agent_as_tool/: agent.py
lessons/: 01-foundations.md  02-mcp-stdio.md  03-mcp-http.md  04-a2a.md  05-workflow-agents.md  05b-parallel-and-loop.md  05c-agent-as-tool.md  06-observability.md  07-state-and-persistence.md  README.md
persistent_agent/: agent.py
refine_loop/: agent.py
research_fanout/: agent.py
writer_pipeline/: agent.py
