[project]
name = "adk-agent"
version = "0.1.0"
description = "Barebones Google ADK agent with a CLI, powered by Anthropic Claude via LiteLLM."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.0.0",
    "litellm>=1.50.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
adk-agent = "adk_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adk_agent"]
